Trying to fix scrolling on mobile

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,5 +1,5 @@
 body {
-  background: transparent url("/images/global/bg-default.jpg") center top fixed no-repeat;
+  background: #000 url("/images/global/bg-default.jpg") center top no-repeat;
   background-size: cover;
   padding: 0;
   font-family: 'Open Sans', sans-serif;
@@ -13,14 +13,13 @@ h1 {
   font-size: 1.75em;
   font-weight: 300;
   line-height: 1.4;
-  margin: 0.5em 0;
+  margin: 0;
+  padding: 0.5em 0;
   text-align: center;
 }
 
 /* Global */
 .header {
-  position: fixed;
-  top: 0; left: 0;
   width: 100%;
   height: 100px;
   background: transparent url("/images/global/bg-default.jpg") center top no-repeat;
@@ -40,8 +39,10 @@ h1 {
 
 .content {
   position: relative;
-  top: 100px;
-  height: 85%;
+  top: 0;
+  height: calc(100% - 155px);
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 /* Landing */
@@ -63,7 +64,6 @@ h1 {
 
 #voteForm {
   text-align: center;
-  padding-bottom: 4em;
 
   .radio { margin: 0; }
 
@@ -134,6 +134,11 @@ h1 {
 
     &.final {
       border-bottom: 0;
+      cursor: default;
+
+      &:hover {
+        color: $mis-text;
+      }
     }
 
       &:hover {
@@ -155,10 +160,9 @@ h1 {
   bottom: 0;
   left: 0;
   width: 100%;
+  height: 55px;
   font-size: 1.5em;
   padding: 1.25em;
-  background: transparent url("/images/global/bg-default.jpg") center bottom no-repeat;
-  background-size: cover;
 
   .survey-confirm, .survey-next {
     position: absolute;
